finished thrash metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -26,155 +26,186 @@
     </aside>
     <main>
         <section class="no-top-separator">
-                <h2>
-                    Le metal
-                </h2>
-                <p>
-                    Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
-                    rapide et agressif. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black
-                        Sabbath</a> a été le
-                    premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
-                </p>
-                <figure class="simple-yt">
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <figcaption>
-                        Un exemple ci-dessus : leur titre le plus connu, qui a été un énorme succès en 1970.
-                    </figcaption>
-                </figure>
-                <p>
-                    Le style de musique s'est divisé au fil du temps en plusieurs sous-genre (liste non exhaustive) :
-                </p>
-                <ul>
-                    <li>
-                        <a href="#heavy">Heavy metal</a>
-                    </li>
-                    <li>
-                        <a href="#thrash">Thrash metal</a>
-                    </li>
-                    <li>
-                        <a href="#black">Black metal</a>
-                    </li>
-                    <li>
-                        <a href="#death">Death metal</a>
-                    </li>
-                    <li>
-                        <a href="#power">Power metal</a>
-                    </li>
-                    <li>
-                        <a href="#folk">Folk metal</a>
-                    </li>
-                    <li>
-                        <a href="#doom">Doom metal</a>
-                    </li>
-                    <li>
-                        <a href="#alternative">Alternative metal</a>
-                    </li>
-                    <li>
-                        <a href="#groove">Groove metal</a>
-                    </li>
-                </ul>
+            <h2>
+                Le metal
+            </h2>
+            <p>
+                Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
+                rapide et agressif. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black
+                    Sabbath</a> a été le
+                premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
+            </p>
+            <figure class="simple-yt">
+                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <figcaption>
+                    Un exemple ci-dessus : leur titre le plus connu, qui a été un énorme succès en 1970.
+                </figcaption>
+            </figure>
+            <p>
+                Le style de musique s'est divisé au fil du temps en plusieurs sous-genre (liste non exhaustive) :
+            </p>
+            <ul>
+                <li>
+                    <a href="#heavy">Heavy metal</a>
+                </li>
+                <li>
+                    <a href="#thrash">Thrash metal</a>
+                </li>
+                <li>
+                    <a href="#black">Black metal</a>
+                </li>
+                <li>
+                    <a href="#death">Death metal</a>
+                </li>
+                <li>
+                    <a href="#power">Power metal</a>
+                </li>
+                <li>
+                    <a href="#folk">Folk metal</a>
+                </li>
+                <li>
+                    <a href="#doom">Doom metal</a>
+                </li>
+                <li>
+                    <a href="#alternative">Alternative metal</a>
+                </li>
+                <li>
+                    <a href="#groove">Groove metal</a>
+                </li>
+            </ul>
         </section>
         <section id="heavy">
-                <h2>
-                    Heavy metal
-                </h2>
-                <p>
-                    Le heavy metal est le genre de metal le plus répandu. C'est un style dérivé du blues rock avec
-                    principalement de la guitare
-                    électrique. C'est également le style de metal qui a beaucoup inspiré pour créer la grande majorité
-                    des autres genres (thrash, black, doom, etc...).<br />
-                    3 artistes connus :
-                    <ul>
-                        <li>
-                            <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>
-                        </li>
-                        <li>
-                            <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a>
-                        </li>
-                        <li>
-                            <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
-                        </li>
-                    </ul>
-                </p>
-                <figure class="double-yt">
-                    <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <figcaption>
-                        Deux titres de heavy metal, Holy Diver de Dio et Run to the Hills de Iron Maiden
-                    </figcaption>
-                </figure>
+            <h2>
+                Heavy metal
+            </h2>
+            <p>
+                Le heavy metal est le genre de metal le plus répandu. C'est un style dérivé du blues rock avec
+                principalement de la guitare électrique. C'est également le style de metal qui a beaucoup inspiré pour
+                créer la grande majorité des autres genres (thrash, black, doom, etc...).<br />
+                3 groupes connus :
+                <ul>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>
+                    </li>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a>
+                    </li>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
+                    </li>
+                </ul>
+            </p>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
+                </figcaption>
+            </figure>
         </section>
         <section id="thrash">
-                <h2>
-                    Thrash metal
-                </h2>
-                <p>
-
-                </p>
+            <h2>
+                Thrash metal
+            </h2>
+            <p>
+                <!-- TODO : lier le Punk rock à sa page dans Pulse -->
+                Le Thrash metal est plutôt dérivé du <a href="">Punk rock</a>. Encore plus rapide/aggressive
+                que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
+                des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
+                    href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>, <a
+                    href="https://fr.wikipedia.org/wiki/Motörhead" target="_blank">Motörhead</a> ou <a
+                    href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black Sabbath</a> (et bien
+                d'autres) ont été les principaux précurseurs du genre.<br />
+                3 groupes connus, dont un plus récent :
+                <ul>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Metallica" target="_blank">Metallica</a>
+                    </li>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a>
+                    </li>
+                    <li>
+                        <a href="https://fr.wikipedia.org/wiki/Trivium_(groupe)" target="_blank">Trivium</a>
+                    </li>
+                </ul>
+            </p>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/xnKhsTXoKCI"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8ZqFlw6hYg"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
+                </figcaption>
+            </figure>
         </section>
         <section id="black">
-                <h2>
-                    Black metal
-                </h2>
-                <p>
+            <h2>
+                Black metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="death">
-                <h2>
-                    Death metal
-                </h2>
-                <p>
+            <h2>
+                Death metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="power">
-                <h2>
-                    Power metal
-                </h2>
-                <p>
+            <h2>
+                Power metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="folk">
-                <h2>
-                    Folk metal
-                </h2>
-                <p>
+            <h2>
+                Folk metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="doom">
-                <h2>
-                    Doom metal
-                </h2>
-                <p>
+            <h2>
+                Doom metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="alternative">
-                <h2>
-                    Alternative metal
-                </h2>
-                <p>
+            <h2>
+                Alternative metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
         <section id="groove">
-                <h2>
-                    Groove metal
-                </h2>
-                <p>
+            <h2>
+                Groove metal
+            </h2>
+            <p>
 
-                </p>
+            </p>
         </section>
     </main>
     <footer>
