added black metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -156,8 +156,37 @@
                 Black metal
             </h2>
             <p>
-
+                Le Black metal est un genre issu du <a href="#thrash">Thrash metal</a>, une version extrême de celui-ci.
+                Le genre a souvent un caractère très brutal et sombre.
+                Les aïgus sont beaucoup plus présents que dans d'autres styles de metal, couplé à du <a
+                    href="https://fr.wikipedia.org/wiki/Chant_guttural" target="_blank">chant guttural</a>.
+                Le côté malsain, sataniste et violent en font un style très souvent mal vu par la société.<br />
+                3 groupes répandus :
             </p>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Immortal" target="_blank">Immortal</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Darkthrone" target="_blank">Darkthrone</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QIf2GgA1rGc"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8VIhIIq-kk"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de black metal, Quintessence de Darkthorne (1995) et Freezing Moon de Mayhem (1994)
+                </figcaption>
+            </figure>
         </section>
         <section id="death">
             <h2>
