--- a/music/metal.html
+++ b/music/metal.html
@@ -193,9 +193,38 @@
                 Death metal
             </h2>
             <p>
-
+                Le Death metal est, comme le black metal, issu du Thrash metal, également en plus extrême. La grande
+                différence est que l'ensemble est plus grave :
+                grande présence de chant guttural profond et des riffs qui penchent beaucoup plus dans les basses
+                fréquences. Il existe plusieurs formes du death metal car il reste un style très varié dont les
+                spécificités peuvent changer d'un album à un autre.<br />
+                3 artistes connus, dont un français (chant anglais) :
             </p>
-        </section>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Death" target="_blank">Death</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Cannibal_Corpse" target="_blank">Cannibal Corpse</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HTr7bqKHvgE"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption>
+                        Deux titres de death metal, Spirit Crusher de Death (1998) et The Art of Dying de Gojira (2008)
+                    </figcaption>
+                </figure>
+      </section>
         <section id="power">
             <h2>
                 Power metal
