--- a/music/metal.html
+++ b/music/metal.html
@@ -198,7 +198,7 @@
                 grande présence de chant guttural profond et des riffs qui penchent beaucoup plus dans les basses
                 fréquences. Il existe plusieurs formes du death metal car il reste un style très varié dont les
                 spécificités peuvent changer d'un album à un autre.<br />
-                3 artistes connus, dont un français (chant anglais) :
+                3 groupes connus, dont un français (chant anglais) :
             </p>
             <ul>
                 <li>
@@ -212,26 +212,57 @@
                 </li>
             </ul>
             <figure class="double-yt">
-                    <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HTr7bqKHvgE"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <figcaption>
-                        Deux titres de death metal, Spirit Crusher de Death (1998) et The Art of Dying de Gojira (2008)
-                    </figcaption>
-                </figure>
-      </section>
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HTr7bqKHvgE"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de death metal, Spirit Crusher de Death (1998) et The Art of Dying de Gojira (2008)
+                </figcaption>
+            </figure>
+        </section>
         <section id="power">
             <h2>
                 Power metal
             </h2>
             <p>
-
+                Le Power metal est une version plus épique du Heavy metal. Il aborde une atmosphère plus positive que
+                les autres styles "descendants". Il y a souvent un côté fantaisie que ce soit dans les paroles ou dans
+                la mélodie.
+                C'est également un des rares styles qui intègrent parfois une symphonie, ce qui le rapproche parfois de
+                la <a href="https://fr.wikipedia.org/wiki/Musique_classique" target="_blank">musique classique</a>. Le
+                style met beaucoup l'accent sur les paroles qui sont mises au premier plan, et avec des musiques qui
+                possèdent rarement du chant guttural.<br />
+                3 groupes connus :
             </p>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Helloween" target="_blank">Helloween</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Powerwolf" target="_blank">Powerwolf</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0jgrCKhxE1s"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/GpxFUo7oxWM"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de death metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood de Powerwolf (2011)
+                </figcaption>
+            </figure>
         </section>
         <section id="folk">
             <h2>
