--- a/nav.html
+++ b/nav.html
@@ -26,43 +26,43 @@
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
-                        <a href="histoire.html">
+                        <a href="histoire.html#">
                             <img src="icon_placeholder.png" alt="icon item 11" />
                             <div class="nav-text">Histoire de la musique</div>
                         </a>
                     </li>
                     <li>
-                        <a href="music/metal.html">
+                        <a href="music/metal.html#">
                             <img src="images/icons/metal.png" alt="icon item 12" />
                             <div class="nav-text">Metal</div>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             <img src="images/icons/rock.png" alt="icon item 13" />
                             <div class="nav-text">Rock</div>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             <img src="icon_placeholder.png" alt="icon item 14" />
                             <div class="nav-text">Pop</div>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             <img src="images/icons/electro.png" alt="icon item 15" />
                             <div class="nav-text">Electro</div>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             <img src="images/icons/rap.png" alt="icon item 16" />
                             <div class="nav-text">Rap</div>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#">
                             <img src="icon_placeholder.png" alt="icon item 17" />
                             <div class="nav-text">Alternative</div>
                         </a>
@@ -74,7 +74,7 @@
                 <span class="dropdown-title">Autres</span>
                 <ul>
                     <li>
-                        <a href="about.html">
+                        <a href="about.html#">
                             <img src="images/icons/about.png" alt="icon item 21" />
                             <div class="nav-text">A propos</div>
                         </a>
