fixed even more the nav

--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="header">
-    <a href="index.html" class="logo50 logo-title">
+    <a href="index.html#" class="logo50 logo-title">
     </a>
     <hr />
     <nav class="header-nav">
