added folk metal and some fixes

--- a/music/metal.html
+++ b/music/metal.html
@@ -233,7 +233,8 @@
                 Le Power metal est une version plus épique du Heavy metal. Il aborde une atmosphère plus positive que
                 les autres styles "descendants". Il y a souvent un côté fantaisie que ce soit dans les paroles ou dans
                 la mélodie.
-                C'est également un des rares styles qui intègrent parfois une symphonie, ce qui le rapproche parfois de
+                C'est également un des rares styles (avec le symphonic metal) qui intègrent parfois une symphonie, ce
+                qui le rapproche parfois de
                 la <a href="https://fr.wikipedia.org/wiki/Musique_classique" target="_blank">musique classique</a>. Le
                 style met beaucoup l'accent sur les paroles qui sont mises au premier plan, et avec des musiques qui
                 possèdent rarement du chant guttural.<br />
@@ -260,7 +261,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood de Powerwolf (2011)
+                    Deux titres de power metal, Through The Fire And Flames de DragonForce (2005) et We Drink Your Blood
+                    de Powerwolf (2011)
                 </figcaption>
             </figure>
         </section>
@@ -269,8 +271,40 @@
                 Folk metal
             </h2>
             <p>
-
+                Le Folk metal est un genre de Heavy metal qui adopte des aspects plus traditionnels aux cultures. On y
+                retrouve des variations telles que le metal celtique, oriental ou encore médiéval. On y retrouve la base
+                instrumentale du metal (guitare, batterie et basse), mais aussi des instruments traditionnels comme le
+                violon, la flûte, le <a href="https://fr.wikipedia.org/wiki/Tin_whistle" target="_blank">tin whistle</a>
+                ou encore du <a href="https://fr.wikipedia.org/wiki/Kantele" target="_blank">kantele</a>. Dans
+                l'ensemble, ce style
+                est plus présent dans les pays nordiques. <br />
+                3 groupes dans ce style :
             </p>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Eluveitie" target="_blank">Eluveitie</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Turisas" target="_blank">Turisas</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Korpiklaani" target="_blank">Korpiklaani</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/-w2m-TeLi6I"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ta-Z_psXODw"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de folk metal, The Call Of The Mountains de Eluveitie (2014) et Keelhauled de Alestorm
+                    (2009)
+                </figcaption>
+            </figure>
         </section>
         <section id="doom">
             <h2>
