added doom metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -311,8 +311,40 @@
                 Doom metal
             </h2>
             <p>
-
+                Le Doom metal est facilement différenciable par son tempo relativement lent par rapport aux autres
+                genres, et
+                possède une atmosphère plus lourde, pesante. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath"
+                    target="_blank">Black
+                    Sabbath</a> a marqué les débuts du style en 1970. Dans sa globalité, le genre tourne autour du
+                désespoir. Il n'a pas été
+                très populaire comparé aux autres genres.<br />
+                3 groupes de Doom metal :
             </p>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Orodruin_(band)">Orodruin</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Novembers_Doom">Novembers Doom</a> (death doom)
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Shape_of_Despair">Shape Of Despair</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MTHBEbivfZI"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/jVywqkytzQc"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de doom metal, Black Sabbath de Black Sabbath (1970) et The Dead Leaf Echo de Novembers
+                    Doom (2005)
+                </figcaption>
+            </figure>
         </section>
         <section id="alternative">
             <h2>
