added alternative metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -351,8 +351,39 @@
                 Alternative metal
             </h2>
             <p>
-
+                <!-- TODO : lier le Alternative rock et rap à sa page dans Pulse -->
+                Le Alternative metal regroupe les styles qui n'appartiennent à aucune catégorie précise, et qui est la
+                fusion du Heavy metal
+                et du <a href="">Alternative rock</a>. Etant un style assez large, on peut y retrouver beaucoup de
+                mélanges, comme du <a href="">Rap</a>,
+                du hip-hop ou du funk.<br />
+                3 groupes connus :
             </p>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/System_of_a_Down" target="_blank">System of a Down</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Korn" target="_blank">Korn</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Soil_(groupe)" target="_blank">Soil</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/CSvFpBOe8eY"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/CSJXle3LP_Q"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteinds bientôt 1Md de vues- et
+                    Coming Undone de Korn (2005)
+                </figcaption>
+            </figure>
         </section>
         <section id="groove">
             <h2>
