added groove metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -390,8 +390,40 @@
                 Groove metal
             </h2>
             <p>
-
+                Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
+                    href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
+                a été un des précurseurs du genre. Le genre est plus axé sur les vocals par rapport au Death metal. Le
+                Groove metal est également un des style ayant
+                influencé le <a href="https://fr.wikipedia.org/wiki/Nu_metal" target="_blank">Nu metal</a> (un
+                sous-genre de metal alternatif). Beaucoup de groupes
+                actuels sont plus dans la tendance du Groove metal qui est une version plus modernisée du Heavy ou du
+                Thrash.<br />
+                3 groupes connus :
             </p>
+            <ul>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Lamb_of_God" target="_blank">Lamb of God</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/DevilDriver" target="_blank">DevilDriver</a>
+                </li>
+                <li>
+                    <a href="https://fr.wikipedia.org/wiki/Machine_Head_(groupe)" target="_blank">Machine Head</a>
+                </li>
+            </ul>
+            <figure class="double-yt">
+                <div>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0ySpk3ErFd0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/oqdZpxkzNvc?t=30"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <figcaption>
+                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Redneck de Lamb of God (2006)
+                </figcaption>
+            </figure>
         </section>
     </main>
     <footer>
