typo & minor changes

--- a/music/metal.html
+++ b/music/metal.html
@@ -352,10 +352,10 @@
             </h2>
             <p>
                 <!-- TODO : lier le Alternative rock et rap à sa page dans Pulse -->
-                Le Alternative metal regroupe les styles qui n'appartiennent à aucune catégorie précise, et qui est la
+                L'Alternative metal regroupe les styles qui n'appartiennent à aucune catégorie précise, et qui est la
                 fusion du Heavy metal
                 et du <a href="">Alternative rock</a>. Etant un style assez large, on peut y retrouver beaucoup de
-                mélanges, comme du <a href="">Rap</a>,
+                mélanges, comme avec du <a href="">Rap</a>,
                 du hip-hop ou du funk.<br />
                 3 groupes connus :
             </p>
@@ -380,7 +380,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteinds bientôt 1Md de vues- et
+                    Deux titres de metal alternatif, Chop Suey! de SOAD (2001) -qui atteind bientôt 1Md de vues- et
                     Coming Undone de Korn (2005)
                 </figcaption>
             </figure>
@@ -392,7 +392,7 @@
             <p>
                 Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
                     href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
-                a été un des précurseurs du genre. Le genre est plus axé sur les vocals par rapport au Death metal. Le
+                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal. Le
                 Groove metal est également un des style ayant
                 influencé le <a href="https://fr.wikipedia.org/wiki/Nu_metal" target="_blank">Nu metal</a> (un
                 sous-genre de metal alternatif). Beaucoup de groupes
@@ -416,12 +416,12 @@
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0ySpk3ErFd0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/oqdZpxkzNvc?t=30"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HL9kaJZw8iw"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Redneck de Lamb of God (2006)
+                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of God (2004)
                 </figcaption>
             </figure>
         </section>
