changed the gojira music

--- a/music/metal.html
+++ b/music/metal.html
@@ -216,12 +216,12 @@
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/HTr7bqKHvgE"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BGHlZwMYO9g"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de death metal, Spirit Crusher de Death (1998) et The Art of Dying de Gojira (2008)
+                    Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
                 </figcaption>
             </figure>
         </section>
@@ -293,7 +293,7 @@
             </ul>
             <figure class="double-yt">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/-w2m-TeLi6I"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/iijKLHCQw5o"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ta-Z_psXODw"
@@ -301,7 +301,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de folk metal, The Call Of The Mountains de Eluveitie (2014) et Keelhauled de Alestorm
+                    Deux titres de folk metal, reprise Iris Mona de Eluveitie (2008) et Keelhauled de Alestorm
                     (2009)
                 </figcaption>
             </figure>
