--- a/about.html
+++ b/about.html
@@ -25,92 +25,89 @@
         <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
-        <section class="no-top-separator">
-            <!--* W3C : Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
-            <article>
-                <h3>
-                    Le projet
-                </h3>
-                <p>
-                    Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
-                    une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
-                    des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
-                </p>
-                <p>
-                    Ce site a vu le jour grâce à un projet tutoré de première année de DUT Informatique. Il a été
-                    réalisé par 4 étudiants (<a href="#team">plus d'informations</a>).
-                    Le projet est en open source sous license MIT disponible <a
-                        href="https://github.com/oxypomme/PT19_20" target="_blank">GitHub</a>.
-                </p>
-            </article>
-            <article id="team">
-                <h3>
-                    L'équipe
-                </h3>
-                <p>
-                    Notre équipe est constituée de 4 membres :
-                </p>
-                <ul class="profile">
-                    <li>
-                        <h3>Nathan HANEN</h3>
-                        <div>
-                            <img class="round" src="https://avatars0.githubusercontent.com/u/30344403"
-                                alt="GitHub profil picture" />
-                        </div>
-                        <div>
-                            <a href="https://github.com/WildGoat07" target="_blank"><img src="images/github.png"
-                                    alt="GitHub icon" /> Profil GitHub</a>
-                        </div>
-                        <p>
-                            Développeur, graphiste et metalleux.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Tom SUBLET</h3>
-                        <div>
-                            <img class="round" src="https://avatars1.githubusercontent.com/u/34627360"
-                                alt="GitHub profil picture" />
-                        </div>
-                        <div>
-                            <a href="https://github.com/oxypomme" target="_blank"><img src="images/github.png"
-                                    alt="GitHub icon" /> Profil GitHub</a>
-                        </div>
-                        <p>
-                            Développeur, designer et rockeur dans l'âme.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Chang GAO</h3>
-                        <div>
-                            <img class="round" src="https://avatars3.githubusercontent.com/u/56112613"
-                                alt="GitHub profil picture" />
-                        </div>
-                        <div>
-                            <a href="https://github.com/catherinegaochangdffeef" target="_blank"><img
-                                    src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
-                        </div>
-                        <p>
-                            Designeuse et fan de pop
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Maxime JOURNET</h3>
-                        <div>
-                            <img class="round" src="https://avatars0.githubusercontent.com/u/56112283"
-                                alt="GitHub profil picture" />
-                        </div>
-                        <div>
-                            <a href="https://github.com/maximejournet54" target="_blank"><img src="images/github.png"
-                                    alt="GitHub icon" /> Profil GitHub</a>
-                        </div>
-                        <p>
-                            Punchliner et passionné d'électro
-                        </p>
-                    </li>
-                </ul>
+        <article>
+            <h3>
+                Le projet
+            </h3>
+            <p>
+                Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
+                une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
+                des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
+            </p>
+            <p>
+                Ce site a vu le jour grâce à un projet tutoré de première année de DUT Informatique. Il a été
+                réalisé par 4 étudiants (<a href="#team">plus d'informations</a>).
+                Le projet est en open source sous license MIT disponible <a href="https://github.com/oxypomme/PT19_20"
+                    target="_blank">GitHub</a>.
+            </p>
+        </article>
+        <article id="team">
+            <h3>
+                L'équipe
+            </h3>
+            <p>
+                Notre équipe est constituée de 4 membres :
+            </p>
+            <ul class="profile">
+                <li>
+                    <h3>Nathan HANEN</h3>
+                    <div>
+                        <img class="round" src="https://avatars0.githubusercontent.com/u/30344403"
+                            alt="GitHub profil picture" />
+                    </div>
+                    <div>
+                        <a href="https://github.com/WildGoat07" target="_blank"><img src="images/github.png"
+                                alt="GitHub icon" /> Profil GitHub</a>
+                    </div>
+                    <p>
+                        Développeur, graphiste et metalleux.
+                    </p>
+                </li>
+                <li>
+                    <h3>Tom SUBLET</h3>
+                    <div>
+                        <img class="round" src="https://avatars1.githubusercontent.com/u/34627360"
+                            alt="GitHub profil picture" />
+                    </div>
+                    <div>
+                        <a href="https://github.com/oxypomme" target="_blank"><img src="images/github.png"
+                                alt="GitHub icon" /> Profil GitHub</a>
+                    </div>
+                    <p>
+                        Développeur, designer et rockeur dans l'âme.
+                    </p>
+                </li>
+                <li>
+                    <h3>Chang GAO</h3>
+                    <div>
+                        <img class="round" src="https://avatars3.githubusercontent.com/u/56112613"
+                            alt="GitHub profil picture" />
+                    </div>
+                    <div>
+                        <a href="https://github.com/catherinegaochangdffeef" target="_blank"><img
+                                src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
+                    </div>
+                    <p>
+                        Designeuse et fan de pop
+                    </p>
+                </li>
+                <li>
+                    <h3>Maxime JOURNET</h3>
+                    <div>
+                        <img class="round" src="https://avatars0.githubusercontent.com/u/56112283"
+                            alt="GitHub profil picture" />
+                    </div>
+                    <div>
+                        <a href="https://github.com/maximejournet54" target="_blank"><img src="images/github.png"
+                                alt="GitHub icon" /> Profil GitHub</a>
+                    </div>
+                    <p>
+                        Punchliner et passionné d'électro
+                    </p>
+                </li>
+            </ul>
 
-            </article>
-        </section>
+        </article>
     </main>
     <footer>
         <iframe src="footer.html"></iframe>
