--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <p>
                 Ce site a vu le jour grâce à un projet tutoré de première année de DUT Informatique. Il a été
                 réalisé par 4 étudiants (<a href="#team">plus d'informations</a>).
-                Le projet est en open source sous license MIT disponible <a href="https://github.com/oxypomme/PT19_20"
+                Le projet est en open source sous licence MIT disponible <a href="https://github.com/oxypomme/PT19_20"
                     target="_blank">GitHub</a>.
             </p>
         </article>
