--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                 alt="GitHub icon" /> Profil GitHub</a>
                     </div>
                     <p>
-                        Développeur, graphiste et metalleux.
+                        Chef d'équipe, développeur, graphiste et metalleux.
                     </p>
                 </li>
                 <li>
