--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             </div>
         </div>
     </header>
-        <video autoplay loop muted class="head-img">
-            <source src="images/background.mp4" type="video/mp4">
-        </video>
+    <video autoplay loop muted class="head-img">
+        <source src="images/background.mp4" type="video/mp4">
+    </video>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
         <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
         <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
     </aside>
-<div class="blank-div">
+    <div class="blank-div">
     </div>
     <main>
         <section id="pulse_pres">
@@ -74,10 +74,8 @@
             <article>
                 <h3>Son histoire</h3>
                 <p>
-                    La musique existe depuis les temps les plus reculés, avant même les premières traces humaines. Les
-                    recherches archéologiques font remonter l'utilisation d'instruments de musique (trous percés dans
-                    des instruments faits d'os ou d'argile) parfois associés à des instruments de chasse (tels les
-                    appeaux ou les rhombes formant un lasso lesté) à au moins 35 000 ans.
+                    La musique une importance grandissante à partir du XXe siècle les différents genres musicaux
+                    populaires auxquels les moyens de communication de masse permettent une diffusion sans précédent.
                 </p>
                 <span class="source">Source : Wikipedia</span>
                 <p>
@@ -92,14 +90,21 @@
             <article>
                 <h3>L'influence de la musique dans notre quotidien</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec dolor velit. Donec commodo
-                    ornare faucibus. In rhoncus tellus felis, in varius tortor condimentum posuere. Suspendisse sed
-                    lacinia
-                    urna. Maecenas leo justo, rutrum ullamcorper euismod ac, auctor vehicula lacus. Nulla aliquam in
-                    justo
-                    vitae elementum. Vivamus leo turpis, luctus vitae leo at, lobortis pulvinar dui. Pellentesque tellus
-                    lacus, dignissim nec tristique eu, laoreet id justo. Integer augue urna, gravida ac molestie a,
-                    hendrerit ut ipsum.
+                    La musique à évoluée avec la technologie, ce qui a eu pour effet de populariser la première avec la
+                    miniaturisation de la seconde.
+
+                    Par exemple : Pour écouter de la musique avant le XXe siècle, il fallait aller dans un endroit
+                    conçu pour diffuser de la musique, un opéra ou une salle de concert par exemple.
+                </p>
+                <p>
+                    Avec l'invention des postes radio, on pouvait écouter la musique chez soi. Plus la technologie
+                    devenait portable (baladeurs, téléphones intelligents, etc.) plus la musique l'accompagnait à tel
+                    point que il suffit maintenant de quelques mouvements pour écouter de la musique depuis un appareil
+                    que l'on a très souvent sur soi.
+                </p>
+                <p>
+                    Le fait que la musique soit à portée de main incite donc à l'écouter plus souvent, à tel point que
+                    la musique occupe une grande place chez la plupart des jeunes (qu'ils soient ados ou adultes).
                 </p>
             </article>
         </section>
