--- a/histoire.html
+++ b/histoire.html
@@ -27,7 +27,7 @@
     <main>
         <h2>L'histoire de la musique</h2>
         <!-- TODO : Reformuler parce que là c'est cramé que c'est du CTRL+C/CTRL+V -->
-        <article>
+        <section class="no-top-separator">
             <h3>La musique au XXe siècle</h3>
             <figure class="float-right bordered">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Fon%C3%B3grafoEdison.JPG/220px-Fon%C3%B3grafoEdison.JPG"
@@ -86,7 +86,7 @@
                 contrôle des droits qui peuvent être exploités".
             </p>
             <span class="source">Source : Wikipédia</span>
-        </article>
+        </section>
     </main>
     <footer>
         <iframe src="footer.html"></iframe>
