added rap link in metal

--- a/music/metal.html
+++ b/music/metal.html
@@ -351,11 +351,10 @@
                 Alternative metal
             </h2>
             <p>
-                <!-- TODO : lier le Alternative rock et rap à sa page dans Pulse -->
                 L'Alternative metal regroupe les styles qui n'appartiennent à aucune catégorie précise, et qui est la
                 fusion du Heavy metal
                 et du <a href="">Alternative rock</a>. Etant un style assez large, on peut y retrouver beaucoup de
-                mélanges, comme avec du <a href="">Rap</a>,
+                mélanges, comme avec du <a href="rap.html">Rap</a>,
                 du hip-hop ou du funk.<br />
                 3 groupes connus :
             </p>
