added links in nav

--- a/nav.html
+++ b/nav.html
@@ -38,13 +38,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="music/rock.html#">
                             <img src="images/icons/rock.png" alt="icon item 13" />
                             <div class="nav-text">Rock</div>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="music/pop.html#">
                             <img src="icon_placeholder.png" alt="icon item 14" />
                             <div class="nav-text">Pop</div>
                         </a>
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="music/rap.html#">
                             <img src="images/icons/rap.png" alt="icon item 16" />
                             <div class="nav-text">Rap</div>
                         </a>
