--- a/music/metal.html
+++ b/music/metal.html
@@ -35,6 +35,12 @@
                     Sabbath</a> a été le
                 premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
             </p>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/1jzDzZWeSDBg5fhNc3tczV" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="simple-yt">
                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -97,6 +103,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/54yLLvpezvPO1lA3GspiZj" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/4Zc7TCHzuNwL0AFBlyLdyr" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
@@ -137,6 +153,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Trivium_(groupe)" target="_blank">Trivium</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/2MuWTIM3b0YEAskbeeFE1i" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/4fiOTntQKr24p07FvQDHZE" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/xnKhsTXoKCI"
@@ -174,6 +200,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Darkthrone" target="_blank">Darkthrone</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0FCG7CbNgbolDMiiufDc4O" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/4AP3a7eEOlz5sTJiWnv2C6" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QIf2GgA1rGc"
@@ -211,6 +247,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/3sSonVXqDeoEFj2lM7mpYT" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/4PWxt9Fy949kUtkEi2GI5V" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
@@ -251,6 +297,16 @@
                     <a href="https://fr.wikipedia.org/wiki/DragonForce" target="_blank">DragonForce</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/1iTb2vi8Bls7QY6CKL2gj2" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/3pWvRhml43vlUrGYlIzLM6" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0jgrCKhxE1s"
@@ -291,6 +347,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Korpiklaani" target="_blank">Korpiklaani</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0K2OeJUFevovQR3ncNcneB" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/2FBmddNjVLziN4AxfUmdQe" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/iijKLHCQw5o"
@@ -301,7 +367,7 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de folk metal, reprise Iris Mona de Eluveitie (2008) et Keelhauled de Alestorm
+                    Deux titres de folk metal, reprise Inis Mona de Eluveitie (2008) et Keelhauled de Alestorm
                     (2009)
                 </figcaption>
             </figure>
@@ -331,6 +397,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Shape_of_Despair">Shape Of Despair</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/1udmPvJoBnqitbeYKKc9mc" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/15vxGRkLxLzL8zed8Pv7Y4" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MTHBEbivfZI"
@@ -369,6 +445,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Soil_(groupe)" target="_blank">Soil</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/2DlHlPMa4M17kufBvI2lEN" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/6p2liQLGoDaLXgND68bfVt" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/CSvFpBOe8eY"
@@ -391,7 +477,8 @@
             <p>
                 Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
                     href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
-                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal. Le
+                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal.
+                Le
                 Groove metal est également un des style ayant
                 influencé le <a href="https://fr.wikipedia.org/wiki/Nu_metal" target="_blank">Nu metal</a> (un
                 sous-genre de metal alternatif). Beaucoup de groupes
@@ -410,6 +497,16 @@
                     <a href="https://fr.wikipedia.org/wiki/Machine_Head_(groupe)" target="_blank">Machine Head</a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/21WIpZXepY9HA7NDwYiNaM" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/1yc53HK08sDab7PDFgnLWk" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/0ySpk3ErFd0"
@@ -420,7 +517,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of God (2004)
+                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of
+                    God (2004)
                 </figcaption>
             </figure>
         </section>
