Todo linked to GitHub

--- a/histoire.html
+++ b/histoire.html
@@ -26,7 +26,7 @@
     </aside>
     <main>
         <h2>L'histoire de la musique</h2>
-        <!-- TODO : Reformuler parce que là c'est cramé que c'est du CTRL+C/CTRL+V -->
+        <!-- TODO #4: Reformuler l'histoire -->
         <section class="no-top-separator">
             <h3>La musique au XXe siècle</h3>
             <figure class="float-right bordered">
