--- a/music/metal.html
+++ b/music/metal.html
@@ -132,7 +132,7 @@
                 Thrash metal
             </h2>
             <p>
-                <!-- TODO : lier le Punk rock à sa page dans Pulse -->
+                <!-- TODO #5 : Lier le Punk rock à sa page -->
                 Le Thrash metal est plutôt dérivé du <a href="">Punk rock</a>. Encore plus rapide/aggressive
                 que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
                 des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
