forgot this one

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="title">
             <a href="#" class="logo80"></a>
+            <!--TODO #6 : Trouver un sous titre au site-->
             <div class="subtitle">
                 Proin vitae neque in sapien faucibus auctor id sed ipsum.
             </div>
